// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`declare_export.js - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["flow"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
declare export default 5;

=====================================output=====================================
declare export default 5

================================================================================
`;

exports[`declare_export.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
declare export default 5;

=====================================output=====================================
declare export default 5;

================================================================================
`;

exports[`declare_module.js - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["flow"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
declare module "foo" {
  declare var bar: string;
}

declare module baz {}

=====================================output=====================================
declare module "foo" {
  declare var bar: string
}

declare module baz {}

================================================================================
`;

exports[`declare_module.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
declare module "foo" {
  declare var bar: string;
}

declare module baz {}

=====================================output=====================================
declare module "foo" {
  declare var bar: string;
}

declare module baz {}

================================================================================
`;

exports[`declare_namespace.js - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["flow"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
declare namespace foo {
  declare var bar: string;
}

=====================================output=====================================
declare namespace foo {
  declare var bar: string
}

================================================================================
`;

exports[`declare_namespace.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
declare namespace foo {
  declare var bar: string;
}

=====================================output=====================================
declare namespace foo {
  declare var bar: string;
}

================================================================================
`;

exports[`declare_namespace_new.js - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["flow"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
declare namespace outer {
  namespace inner {
    const value: string;
  }
}

declare export namespace exported {}

=====================================output=====================================
declare namespace outer {
  namespace inner {
    const value: string
  }
}

declare export namespace exported {}

================================================================================
`;

exports[`declare_namespace_new.js - {"semi":false} format[hermes] 1`] = `
"';' expected (2:13)
  1 | declare namespace outer {
> 2 |   namespace inner {
    |             ^
  3 |     const value: string;
  4 |   }
  5 | }
Cause: ';' expected (2:12)
  namespace inner {
            ^"
`;

exports[`declare_namespace_new.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
declare namespace outer {
  namespace inner {
    const value: string;
  }
}

declare export namespace exported {}

=====================================output=====================================
declare namespace outer {
  namespace inner {
    const value: string;
  }
}

declare export namespace exported {}

================================================================================
`;

exports[`declare_namespace_new.js format[hermes] 1`] = `
"';' expected (2:13)
  1 | declare namespace outer {
> 2 |   namespace inner {
    |             ^
  3 |     const value: string;
  4 |   }
  5 | }
Cause: ';' expected (2:12)
  namespace inner {
            ^"
`;

exports[`declare_type.js - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["flow"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
declare type A = string;

=====================================output=====================================
declare type A = string

================================================================================
`;

exports[`declare_type.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
declare type A = string;

=====================================output=====================================
declare type A = string;

================================================================================
`;

exports[`declare_var.js - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["flow"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
declare var bool: React$PropType$Primitive<boolean>;

=====================================output=====================================
declare var bool: React$PropType$Primitive<boolean>

================================================================================
`;

exports[`declare_var.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
declare var bool: React$PropType$Primitive<boolean>;

=====================================output=====================================
declare var bool: React$PropType$Primitive<boolean>;

================================================================================
`;

exports[`long.js - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["flow"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
export type AdamPlacementValidationSingleErrorKey =
  'SOME_FANCY_TARGETS.GLOBAL_TARGET';

export type SomeReallyLongLongLongLongLongLongLongLongLongLongLongLongLongLongKey = true;

export type SomeOtherLongLongLongLongLongLongLongLongLongLongLongLongLongLongKey = null;

type SomeOtherLongLongLongLongLongLongLongLongLongLongLongLongLongLongKey2 = SomeReallyLongLongLongLongLongLongIdentifier;

=====================================output=====================================
export type AdamPlacementValidationSingleErrorKey =
  "SOME_FANCY_TARGETS.GLOBAL_TARGET"

export type SomeReallyLongLongLongLongLongLongLongLongLongLongLongLongLongLongKey =
  true

export type SomeOtherLongLongLongLongLongLongLongLongLongLongLongLongLongLongKey =
  null

type SomeOtherLongLongLongLongLongLongLongLongLongLongLongLongLongLongKey2 =
  SomeReallyLongLongLongLongLongLongIdentifier

================================================================================
`;

exports[`long.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export type AdamPlacementValidationSingleErrorKey =
  'SOME_FANCY_TARGETS.GLOBAL_TARGET';

export type SomeReallyLongLongLongLongLongLongLongLongLongLongLongLongLongLongKey = true;

export type SomeOtherLongLongLongLongLongLongLongLongLongLongLongLongLongLongKey = null;

type SomeOtherLongLongLongLongLongLongLongLongLongLongLongLongLongLongKey2 = SomeReallyLongLongLongLongLongLongIdentifier;

=====================================output=====================================
export type AdamPlacementValidationSingleErrorKey =
  "SOME_FANCY_TARGETS.GLOBAL_TARGET";

export type SomeReallyLongLongLongLongLongLongLongLongLongLongLongLongLongLongKey =
  true;

export type SomeOtherLongLongLongLongLongLongLongLongLongLongLongLongLongLongKey =
  null;

type SomeOtherLongLongLongLongLongLongLongLongLongLongLongLongLongLongKey2 =
  SomeReallyLongLongLongLongLongLongIdentifier;

================================================================================
`;

exports[`opaque.js - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["flow"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
declare export opaque type Foo;
declare export opaque type Bar<T>;
declare export opaque type Baz: Foo;
declare export opaque type Foo1<T>: Bar<T>;
declare export opaque type Foo2<T>: Bar;
declare export opaque type Foo3: Bar<T>;
opaque type ID = string;
opaque type Foo4<T> = Bar<T>;
opaque type Maybe<T> = _Maybe<T, *>;
export opaque type Foo5 = number;
opaque type union =
 | {type: "A"}
 | {type: "B"};
opaque type overloads =
  & ((x: string) => number)
  & ((x: number) => string);

opaque type Counter super empty extends Box<T> = Container<T>;
opaque type Counter super Box<T> = Container<T>;

opaque type Counter super Looooooooooooooooooog extends BoxLooooooooooooooooooog<T> = Container<T>;
opaque type Counter super BoxLooooooooooooooooooooooooooooooooog<T> = Container<T>;

declare opaque type Counter super empty extends Box<T>;
declare opaque type Counter super Box<T>;
declare opaque type Counter super Looooooooooooooooooog extends BoxLooooooooooooooooooog<T>;
declare opaque type Counter super BoxLooooooooooooooooooooooooooooooooooooooooooooooog<T>;

=====================================output=====================================
declare export opaque type Foo
declare export opaque type Bar<T>
declare export opaque type Baz: Foo
declare export opaque type Foo1<T>: Bar<T>
declare export opaque type Foo2<T>: Bar
declare export opaque type Foo3: Bar<T>
opaque type ID = string
opaque type Foo4<T> = Bar<T>
opaque type Maybe<T> = _Maybe<T, *>
export opaque type Foo5 = number
opaque type union = { type: "A" } | { type: "B" }
opaque type overloads = ((x: string) => number) & ((x: number) => string)

opaque type Counter super empty extends Box<T> = Container<T>
opaque type Counter super Box<T> = Container<T>

opaque type Counter
  super Looooooooooooooooooog
  extends BoxLooooooooooooooooooog<T> = Container<T>
opaque type Counter
  super BoxLooooooooooooooooooooooooooooooooog<T> = Container<T>

declare opaque type Counter super empty extends Box<T>
declare opaque type Counter super Box<T>
declare opaque type Counter
  super Looooooooooooooooooog
  extends BoxLooooooooooooooooooog<T>
declare opaque type Counter
  super BoxLooooooooooooooooooooooooooooooooooooooooooooooog<T>

================================================================================
`;

exports[`opaque.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
declare export opaque type Foo;
declare export opaque type Bar<T>;
declare export opaque type Baz: Foo;
declare export opaque type Foo1<T>: Bar<T>;
declare export opaque type Foo2<T>: Bar;
declare export opaque type Foo3: Bar<T>;
opaque type ID = string;
opaque type Foo4<T> = Bar<T>;
opaque type Maybe<T> = _Maybe<T, *>;
export opaque type Foo5 = number;
opaque type union =
 | {type: "A"}
 | {type: "B"};
opaque type overloads =
  & ((x: string) => number)
  & ((x: number) => string);

opaque type Counter super empty extends Box<T> = Container<T>;
opaque type Counter super Box<T> = Container<T>;

opaque type Counter super Looooooooooooooooooog extends BoxLooooooooooooooooooog<T> = Container<T>;
opaque type Counter super BoxLooooooooooooooooooooooooooooooooog<T> = Container<T>;

declare opaque type Counter super empty extends Box<T>;
declare opaque type Counter super Box<T>;
declare opaque type Counter super Looooooooooooooooooog extends BoxLooooooooooooooooooog<T>;
declare opaque type Counter super BoxLooooooooooooooooooooooooooooooooooooooooooooooog<T>;

=====================================output=====================================
declare export opaque type Foo;
declare export opaque type Bar<T>;
declare export opaque type Baz: Foo;
declare export opaque type Foo1<T>: Bar<T>;
declare export opaque type Foo2<T>: Bar;
declare export opaque type Foo3: Bar<T>;
opaque type ID = string;
opaque type Foo4<T> = Bar<T>;
opaque type Maybe<T> = _Maybe<T, *>;
export opaque type Foo5 = number;
opaque type union = { type: "A" } | { type: "B" };
opaque type overloads = ((x: string) => number) & ((x: number) => string);

opaque type Counter super empty extends Box<T> = Container<T>;
opaque type Counter super Box<T> = Container<T>;

opaque type Counter
  super Looooooooooooooooooog
  extends BoxLooooooooooooooooooog<T> = Container<T>;
opaque type Counter
  super BoxLooooooooooooooooooooooooooooooooog<T> = Container<T>;

declare opaque type Counter super empty extends Box<T>;
declare opaque type Counter super Box<T>;
declare opaque type Counter
  super Looooooooooooooooooog
  extends BoxLooooooooooooooooooog<T>;
declare opaque type Counter
  super BoxLooooooooooooooooooooooooooooooooooooooooooooooog<T>;

================================================================================
`;
